--- a/po/hu.po
+++ b/po/hu.po
@@ -3,24 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Alexander Kojevnikov <alexander@kojevnikov.com>, 2011-2012
-# flz <inactive+flz@transifex.com>, 2011
-# FoeNyx <foenyx@free.fr>, 2011
-# PegHorse <peghorse@crdf.fr>, 2012
-# Vincent A <doezerx@gmail.com>, 2015
+# Gergő Seregély <blacksurfer167@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Spek\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-29 13:05-0700\n"
-"PO-Revision-Date: 2017-09-19 09:46+0000\n"
-"Last-Translator: Vincent A <doezerx@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/spek/spek/language/fr/)\n"
+"PO-Revision-Date: 2017-10-21 09:16+0000\n"
+"Last-Translator: Gergő Seregély <blacksurfer167@gmail.com>\n"
+"Language-Team: Hungarian (http://www.transifex.com/spek/spek/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: hu\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../data/spek.desktop.in.in.h:1
 msgid "Spek"
@@ -28,15 +24,15 @@ msgstr "Spek"
 
 #: ../data/spek.desktop.in.in.h:2
 msgid "Spectrum Analyser"
-msgstr "Analyseur de Spectre"
+msgstr "Spektrum Analizáló"
 
 #: ../data/spek.desktop.in.in.h:3
 msgid "View spectrograms of your audio files"
-msgstr "Voir les spectrogrammes de vos fichiers audio"
+msgstr "Spektrogrammot mutat az audió fájljaidról"
 
 #: ../data/spek.desktop.in.in.h:4
 msgid "Spek Spectrum Analyser"
-msgstr "Analyseur de spectre Spek"
+msgstr "Spek Spektrum Analizáló"
 
 #: ../src/spek-pipeline.cc:197
 #, c-format
@@ -53,74 +49,74 @@ msgstr "%d Hz"
 msgid "%d bit"
 msgid_plural "%d bits"
 msgstr[0] "%d bit"
-msgstr[1] "%d bits"
+msgstr[1] "%d bitek"
 
 #: ../src/spek-pipeline.cc:217
 #, c-format
 msgid "%d channel"
 msgid_plural "%d channels"
-msgstr[0] "%d canal"
-msgstr[1] "%d canaux"
+msgstr[0] "%d csatorna"
+msgstr[1] "%d csatornák"
 
 #: ../src/spek-pipeline.cc:234
 msgid "Cannot open input file"
-msgstr "Impossible d'ouvrir le fichier"
+msgstr "A fájlt nem lehet megnyitni"
 
 #: ../src/spek-pipeline.cc:237
 msgid "Cannot find stream info"
-msgstr "Impossible de trouver les infos sur le flux audio"
+msgstr "Nem található adatfolyam "
 
 #: ../src/spek-pipeline.cc:240
 msgid "The file contains no audio streams"
-msgstr "Le fichier ne contient pas de flux audio"
+msgstr "A fájlban nincs adatfolyam"
 
 #: ../src/spek-pipeline.cc:243
 msgid "Cannot find decoder"
-msgstr "Impossible de trouver de décodeurs"
+msgstr "Nem található dekóder"
 
 #: ../src/spek-pipeline.cc:246
 msgid "Unknown duration"
-msgstr "Durée inconnue"
+msgstr "Ismeretlen tartam"
 
 #: ../src/spek-pipeline.cc:249
 msgid "No audio channels"
-msgstr "Absence de canal audio"
+msgstr "Nincs audió csatorna"
 
 #: ../src/spek-pipeline.cc:252
 msgid "Cannot open decoder"
-msgstr "Impossible d'ouvrir le décodeur"
+msgstr "A dekódolót nem lehet megnyitni"
 
 #: ../src/spek-pipeline.cc:255
 msgid "Unsupported sample format"
-msgstr "Format d'échantillon sonore non pris en charge"
+msgstr "Nem támogatott minta"
 
 #. TRANSLATORS: first %s is the error message, second %s is stream
 #. description.
 #: ../src/spek-pipeline.cc:267
 #, c-format
 msgid "%s: %s"
-msgstr "%s : %s"
+msgstr "%s: %s"
 
 #: ../src/spek-preferences-dialog.cc:67
 msgid "Preferences"
-msgstr "Préférences"
+msgstr "Beállítások"
 
 #: ../src/spek-preferences-dialog.cc:72
 msgid "(system default)"
-msgstr "(Valeur par défaut du système)"
+msgstr "(Alapértelmezett)"
 
 #. TRANSLATORS: The name of a section in the Preferences dialog.
 #: ../src/spek-preferences-dialog.cc:79
 msgid "General"
-msgstr "Général"
+msgstr "Általános"
 
 #: ../src/spek-preferences-dialog.cc:88
 msgid "Language:"
-msgstr "Langue:"
+msgstr "Nyelv:"
 
 #: ../src/spek-preferences-dialog.cc:104
 msgid "Check for &updates"
-msgstr "Vérifier les &mises à jours"
+msgstr "Frissítések ellenőrzése"
 
 #: ../src/spek-spectrogram.cc:191
 #, c-format
@@ -144,27 +140,27 @@ msgstr "-00 dB"
 
 #: ../src/spek-window.cc:75
 msgid "Spek - Acoustic Spectrum Analyser"
-msgstr "Spek - Analyseur de Spectre Acoustique"
+msgstr "Spek - Akusztikai Spektrum Analizáló"
 
 #: ../src/spek-window.cc:91
 msgid "&File"
-msgstr "&Fichier"
+msgstr "&Fájl"
 
 #: ../src/spek-window.cc:97
 msgid "&Edit"
-msgstr "É&dition"
+msgstr "&Szerkesztés"
 
 #: ../src/spek-window.cc:101 ../src/spek-window.cc:106
 msgid "&Help"
-msgstr "Aid&e"
+msgstr "&Súgó"
 
 #: ../src/spek-window.cc:128
 msgid "Help"
-msgstr "Aide"
+msgstr "Súgó"
 
 #: ../src/spek-window.cc:141
 msgid "A new version of Spek is available, click to download."
-msgstr "Une nouvelle version de Spek est disponible, cliquez pour la télécharger."
+msgstr "Egy új verzió érhető el, kattints a letöltéshez."
 
 #. TRANSLATORS: window title, %s is replaced with the file name
 #: ../src/spek-window.cc:179
@@ -174,44 +170,44 @@ msgstr "Spek - %s"
 
 #: ../src/spek-window.cc:226
 msgid "All files"
-msgstr "Tous les fichiers"
+msgstr "Minden fájl"
 
 #: ../src/spek-window.cc:228
 msgid "Audio files"
-msgstr "Fichiers audio"
+msgstr "Audió fájlok"
 
 #: ../src/spek-window.cc:242
 msgid "Open File"
-msgstr "Ouvrir un fichier"
+msgstr "Fájl megnyitása"
 
 #: ../src/spek-window.cc:264
 msgid "PNG images"
-msgstr "Images PNG"
+msgstr "PNG kép"
 
 #: ../src/spek-window.cc:270
 msgid "Save Spectrogram"
-msgstr "Sauvegarder le spectrogramme"
+msgstr "Spektrogram mentése"
 
 #. Suggested name is <file_name>.png
 #: ../src/spek-window.cc:278
 msgid "Untitled"
-msgstr "Sans titre"
+msgstr "Névtelen"
 
 #. TRANSLATORS: Add your name here
 #: ../src/spek-window.cc:325
 msgid "translator-credits"
-msgstr "Florent Thoumie\nAlexander Kojevnikov"
+msgstr "A fordítást készítette Seregély Gergő.\nNoParaMediaGroup\nblscksurfer167@icloud.com"
 
 #: ../src/spek-window.cc:331
 msgid "Copyright (c) 2010-2013 Alexander Kojevnikov and contributors"
-msgstr "Copyright (c) 2010-2015 Alexander Kojevnikov et contributeurs."
+msgstr "Minden jog fenntartva (©) 2010-2013 Alexander Kojevnikov és a közreműködők részére."
 
 #: ../src/spek-window.cc:334
 msgid "Spek Website"
-msgstr "Site web de Spek"
+msgstr "Spek weboldala"
 
 #. TRANSLATORS: the %s is the package version.
 #: ../src/spek.cc:94
 #, c-format
 msgid "Spek version %s"
-msgstr "Spek version %s"
+msgstr "Spek verzió %s"
