--- a/po/lv.po
+++ b/po/lv.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Toms Zvīnis <tomy91@inbox.lv>, 2014
+# Toms <tomy91@inbox.lv>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Spek\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-29 13:05-0700\n"
-"PO-Revision-Date: 2014-03-02 11:25+0000\n"
-"Last-Translator: Toms Zvīnis <tomy91@inbox.lv>\n"
-"Language-Team: Latvian (http://www.transifex.com/projects/p/spek/language/lv/)\n"
+"PO-Revision-Date: 2017-09-23 19:36+0000\n"
+"Last-Translator: Toms <tomy91@inbox.lv>\n"
+"Language-Team: Latvian (http://www.transifex.com/spek/spek/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
