--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -29,7 +29,7 @@ msgstr "频谱分析器"
 
 #: ../data/spek.desktop.in.in.h:3
 msgid "View spectrograms of your audio files"
-msgstr "查看你的音频频谱"
+msgstr "查看您的音频频谱"
 
 #: ../data/spek.desktop.in.in.h:4
 msgid "Spek Spectrum Analyser"
@@ -49,21 +49,21 @@ msgstr "%d Hz"
 #, c-format
 msgid "%d bit"
 msgid_plural "%d bits"
-msgstr[0] "%d 字节"
+msgstr[0] "%d bits"
 
 #: ../src/spek-pipeline.cc:217
 #, c-format
 msgid "%d channel"
 msgid_plural "%d channels"
-msgstr[0] "%d 声道"
+msgstr[0] "%d channels"
 
 #: ../src/spek-pipeline.cc:234
 msgid "Cannot open input file"
-msgstr "无法打开文件"
+msgstr "无法打开该文件"
 
 #: ../src/spek-pipeline.cc:237
 msgid "Cannot find stream info"
-msgstr "无法定位流媒体信息"
+msgstr "无法定位媒体信息"
 
 #: ../src/spek-pipeline.cc:240
 msgid "The file contains no audio streams"
@@ -87,7 +87,7 @@ msgstr "无法打开解码器"
 
 #: ../src/spek-pipeline.cc:255
 msgid "Unsupported sample format"
-msgstr "不支持的音频"
+msgstr "不支持的音频格式"
 
 #. TRANSLATORS: first %s is the error message, second %s is stream
 #. description.
@@ -98,7 +98,7 @@ msgstr "%s: %s"
 
 #: ../src/spek-preferences-dialog.cc:67
 msgid "Preferences"
-msgstr "偏好设定"
+msgstr "偏好设置"
 
 #: ../src/spek-preferences-dialog.cc:72
 msgid "(system default)"
@@ -107,7 +107,7 @@ msgstr "(系统默认)"
 #. TRANSLATORS: The name of a section in the Preferences dialog.
 #: ../src/spek-preferences-dialog.cc:79
 msgid "General"
-msgstr "基本设定"
+msgstr "基本设置"
 
 #: ../src/spek-preferences-dialog.cc:88
 msgid "Language:"
