Switch between audio channels
Co-authored-by: Alexander Kojevnikov <alexander@kojevnikov.com>

--- a/man/spek.1
+++ b/man/spek.1
@@ -64,6 +64,11 @@ Show the about dialog.
 .RE
 .SS Spectrogram
 .TP
+.B \f[C]c\f[], \f[C]C\f[]
+Change the audio channel.
+.RS
+.RE
+.TP
 .B \f[C]f\f[], \f[C]F\f[]
 Change the DFT window function.
 .RS
