--- a/man/spek.1
+++ b/man/spek.1
@@ -1,13 +1,13 @@
-.TH SPEK 1 "2013\-04\-18" "User\[aq]s Guide" "Version 0.8.2"
+.TH SPEK-X 1 "2023\-01\-26" "User\[aq]s Guide" "Version 0.9.1"
 .SH NAME
 .PP
-Spek \- Acoustic Spectrum Analyser
+Spek-X \- Acoustic Spectrum Analyser
 .SH SYNOPSIS
 .PP
 \f[C]spek\f[] [\f[I]OPTION\f[] \f[I]\&...\f[]] [\f[I]FILE\f[]] [\f[I]PNG\f[]] [\f[I]WIDTH\f[]] [\f[I]HEIGHT\f[]]
 .SH DESCRIPTION
 .PP
-\f[I]Spek\f[] generates a spectrogram for the input audio file.
+\f[I]Spek-X\f[] generates a spectrogram for the input audio file.
 .SH ARGUMENTS
 .TP
 \f[I]FILE\f[]
@@ -35,7 +35,7 @@ Output version information then quit.
 .SH KEYBINDINGS
 .SS Notes
 .PP
-On OS X use the Command key instead of Ctrl.
+On macOS use the Command key instead of Ctrl.
 .SS Menu
 .TP
 .B \f[C]Ctrl\-O\f[]
@@ -101,7 +101,7 @@ Change the DFT window size.
 .SH FILES
 .TP
 .B \f[I]~/.config/spek/preferences\f[]
-The configuration file for \f[I]Spek\f[], stored in a simple INI format.
+The configuration file for \f[I]Spek-X\f[], stored in a simple INI format.
 .RS
 .RE
 .SH AUTHORS
@@ -111,5 +111,5 @@ Other contributors are listed in the LICENCE.md file distributed with
 the source code.
 .SH DISTRIBUTION
 .PP
-The latest version of \f[I]Spek\f[] may be downloaded from
-<http://spek.cc>.
+The latest version of \f[I]Spek-X\f[] may be downloaded from
+<https://github.com/MikeWang000000/spek-X>.
